--- a/AntExample/WebContent/index.html
+++ b/AntExample/WebContent/index.html
@@ -16,42 +16,19 @@
 
 <body>
 	<header>
+<!--
 		<img src="_images/logo.png" alt="Logo" width="165" height="120">
+-->
 		<nav>
 			<ul>
 				<li><a href="">Home</a></li>
 				<li><a href="">Trainings</a></li>
-				<li><a href="">Testimonials</a></li>
-				<li><a href="">Contact</a></li>
+				<li><a href="">Contact Us</a></li>
 			</ul>
 			<a href="">Inquiry Form</a>
 		</nav>
 	</header>
-	<article id="whyUs">
-		<h1>Why Us</h1>
-		<section>
-			<div class="box1">
-				<div></div>
-				<h3>Training Weightage</h3>
-				<p>50:50 model i.e  equal focus on theory and hands-on exercises.</p>
-			</div>
-			<div class="box1">
-				<div></div>
-				<h3>Teaching Methodology</h3>
-				<p>Thought process based </p>
-			</div>
-			<div class="box1">
-				<div></div>
-				<h3>Flexible Schedule</h3>
-				<p>Weekend/Week days batches</p>
-			</div>
-			<div class="box1">
-				<div></div>
-				<h3>24 * 7 Live cloud infrastructure</h3>
-				<p>Everything is saved</p>
-			</div>
-		</section>
-	</article>
+<!--
 	<article id="highlights">
 		<h1>Impeccable Research Labs Training Programs highlights</h1>
 		<ul>
@@ -61,8 +38,9 @@
 			<li>Highly interactive online & classroom training programs.</li>
 		</ul>
 	</article>
+-->
 	<article id="courses">
-		<h1>Courses List</h1>
+		<h1>Our Expertise</h1>
 		<div class="slider1">
 			<div class="slide">
 				<section>
@@ -71,10 +49,10 @@
 				</section>
 				<section>
 					<ul>
-						<li><img src="_images/awsLogo.jpg">AWS Cloud Overview</li>
-						<li><img src="_images/openStackLogo.jpg">Open Stack Cloud Overview</li>
-						<li><img src="_images/azureLogo.jpg">Azure Cloud Overview</li>
-						<li>Rackspace Cloud Overview</li>
+						<li><img src="_images/awsLogo.jpg">AWS Cloud </li>
+						<li><img src="_images/openStackLogo.jpg">Open Stack Cloud </li>
+						<li><img src="_images/azureLogo.jpg">Azure Cloud </li>
+						<li>Rackspace Cloud </li>
 					</ul>
 				</section>
 			</div>
